# realsense-ros

realsense2_camera/: package.xml
realsense2_camera/src/: base_realsense_node.cpp
realsense2_sdk/: CMakeLists.txt  package.xml
